  which at the time of introducing them were supposed to be inside the class 
  definition. These two functions have been removed.
  
- eZFilePassthroughHandler

  The deprecated class eZFilePassthroughHandler was removed. Use
  ezFilePassthroughHandler instead.
  
- eZXMLInputType

  The class eZXMLInputType, which was not any longer used by any part of the eZ
  Publish kernel, has been removed.

New constants in config.php
---------------------------

EZP_INI_FILEMTIME_CHECK
    This new setting controls whether eZINI should check if the settings have
    been updated in the *.ini-files*. If this check is disabled eZ Publish
    will always used the cached values, lowering the amount of stat-calls to
    the file system, and thus increasing performance.

EZP_AUTOLOAD_ALLOW_KERNEL_OVERRIDE
    This setting controls if eZ Publish's autoload system should allow, and
    load classes, which override kernel classes from extensions.

Changes to method signatures
----------------------------

- eZContentObject - fetchAttributesByIdentifier

  Parameter 3 is changed to be an array of locale codes, rather than a string
  with locale code.
  
- eZDBClusterFileHandler - getFileList

  The parameters have been completely changed. Earlier, getFileList() accepted
  2 booleans to define if files in the scopes 'binaryfile' and 'image' should 
  be omitted. Now the method accepts an array of scopes of the files you want 
  to be returned, and a boolean with which you can reverses the behavior so 
  that all files in the scopes in the array are excluded.

Change of behaviour
-------------------

- eZContentClass - __clone

  A clone of an instance of eZContentClass will have a new remote ID, while 
  before it had the same remote ID as its original.
  
- eZCharTransform does not any longer have a member variable $Mapper, because
  it caused wrong transformation rules to be used when calling 
  eZCharTransform::transformByGroup multiple times with another value for its 