@@ -3,6 +3,7 @@ Changes from 4.1.0alpha1 to 4.1.0alpha2
 *Kernel:
 - Implemented enhancement #14173: Make setup/extensions clear all necessary settings immediately
 - Implemented enhancement #13739: Replace __CLASS__.'::'.__FUNCTION__ with __METHOD__
+- Implemented enhancement #14180: Remove deprecated eZURLTranslator class
 
 *Design:
 
